--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-pr-helper",
   "displayName": "GitHub PR Helper",
-  "description": "Streamline GitHub pull request creation with AI-powered descriptions using Google Gemini",
+  "description": "Streamline GitHub pull request creation with AI-powered descriptions using Google Gemini, OpenAI, or Anthropic",
   "version": "0.5.0",
   "publisher": "kwickramasekara",
   "repository": "https://github.com/kwickramasekara/github-pr-helper",
@@ -19,6 +19,8 @@
     "pr",
     "git",
     "gemini",
+    "openai",
+    "anthropic",
     "ai"
   ],
   "activationEvents": [
@@ -158,17 +160,63 @@
     "configuration": {
       "title": "GitHub PR Helper",
       "properties": {
-        "githubPrHelper.geminiApiKey": {
+        "githubPrHelper.provider": {
+          "type": "string",
+          "enum": [
+            "google",
+            "openai",
+            "anthropic"
+          ],
+          "enumDescriptions": [
+            "Google Gemini (requires a Google Gemini API key)",
+            "OpenAI (requires an OpenAI API key)",
+            "Anthropic (requires an Anthropic API key)"
+          ],
+          "default": "google",
+          "description": "AI provider to use for PR content generation",
+          "order": 1
+        },
+        "githubPrHelper.providerApiKey": {
           "type": "string",
           "default": "",
-          "description": "Google Gemini API key for PR description generation",
-          "order": 1
+          "description": "API key for the selected AI provider",
+          "order": 2
+        },
+        "githubPrHelper.model": {
+          "type": "string",
+          "enum": [
+            "google/gemini-2.5-flash",
+            "google/gemini-3.1-flash",
+            "openai/gpt-4.1-mini",
+            "openai/gpt-5-mini",
+            "anthropic/claude-sonnet-4-6",
+            "anthropic/claude-haiku-4-5",
+            "custom"
+          ],
+          "enumDescriptions": [
+            "Google Gemini 2.5 Flash — fast and cost-efficient",
+            "Google Gemini 3.1 Flash — latest frontier Flash model",
+            "OpenAI GPT-4.1 Mini — fast, great for coding tasks",
+            "OpenAI GPT-5 Mini — compact, cost-efficient reasoning",
+            "Anthropic Claude Sonnet 4.6 — frontier coding and agents",
+            "Anthropic Claude Haiku 4.5 — fastest Anthropic model",
+            "Custom — enter your own model ID below"
+          ],
+          "default": "google/gemini-2.5-flash",
+          "description": "AI model to use. Select a preset or choose 'custom' to enter a model ID manually.",
+          "order": 3
+        },
+        "githubPrHelper.customModel": {
+          "type": "string",
+          "default": "",
+          "description": "Custom model ID (only used when AI Model is set to 'custom'). Find model IDs in the provider's API docs: Google (ai.google.dev/gemini-api/docs/models), OpenAI (platform.openai.com/docs/models), Anthropic (docs.anthropic.com/en/docs/about-claude/models).",
+          "order": 4
         },
         "githubPrHelper.baseBranch": {
           "type": "string",
           "default": "main",
           "description": "Default base branch for PRs",
-          "order": 2
+          "order": 5
         },
         "githubPrHelper.defaultReviewers": {
           "type": "array",
@@ -177,19 +225,19 @@
           },
           "default": [],
           "description": "Default reviewers (GitHub usernames or team slugs)",
-          "order": 3
+          "order": 6
         },
         "githubPrHelper.titleTemplate": {
           "type": "string",
           "default": "Generate a concise PR title (max 72 chars) that summarizes the changes",
           "description": "Custom instructions for LLM title generation",
-          "order": 4
+          "order": 7
         },
         "githubPrHelper.descriptionTemplate": {
           "type": "string",
           "default": "Generate a PR description with: ## Summary, ## Changes Made (bullet points), ## Testing Notes",
           "description": "Custom instructions for LLM description generation",
-          "order": 5
+          "order": 8
         },
         "githubPrHelper.promptOnBranchPublish": {
           "type": "string",
@@ -205,7 +253,7 @@
           ],
           "default": "ask",
           "description": "Behavior when a branch is published to remote",
-          "order": 6
+          "order": 9
         },
         "githubPrHelper.enableCopilotReviewer": {
           "type": "boolean",
@@ -257,6 +305,10 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "ai": "^5.0.0",
+    "@ai-sdk/google": "^2.0.0",
+    "@ai-sdk/openai": "^2.0.0",
+    "@ai-sdk/anthropic": "^2.0.0",
     "marked": "^12.0.0"
   },
   "license": "MIT"
